Projeto_Compilador/tests/cases/fail/malformedProgramBlockLabels.pas
program HelloWorld(correct   , externals,    list);
    label 123, asassaas, 00100, 99;.